# dftly

./: .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  README.md  conftest.py  mkdocs.yml  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: python-build.yaml  tests.yaml
docs/: api.md  design.md  index.md  usage.md
src/dfpm/: expr.py  matcher.py
src/dftly/: __init__.py  grammar.lark  nodes.py  parser.py  polars.py  validation.py
src/dftly/expressions/: base.py  comparison.py  general.py
src/dftly/nodes/: __init__.py  arithmetic.py  base.py  comparison.py  conditional.py  datetime.py  str.py  types.py  utils.py
src/dftly/str_form/: grammar.lark  parser.py
tests/: test_integration_polars.py  test_parser.py  test_polars_engine.py  test_string_syntax.py
