[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfpm"
dynamic = ["version"]
authors = [
  { name="Matthew McDermott", email="mattmcdermott8@gmail.com" },
]
description = "A simple library for a safe, expressive, config-file friendly, and readable DSL for encoding simple dataframe operations."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["omegaconf", "lark"]

[tool.setuptools_scm]

[project.optional-dependencies]
# Development dependencies
dev = ["pre-commit<4", "ruff"]
tests = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/mmcdermott/df_parser_matcher"
Issues = "https://github.com/mmcdermott/df_parser_matcher/issues"
